crates/test-files/fixtures/compile_errors/_test_fn_call.fe
fn my_func() {
    my_test()
}

#test
fn my_test() { }